# decluttr

./: .gitignore  README.md  item.py  package-lock.json  package.json
.devcontainer/: devcontainer.json
decluttr-app/backend/: .gitignore  =0.3.0  README.md  default.sqlite  main.py  pyproject.toml  requirements.txt  tru.ipynb
decluttr-app/backend/app/api/routers/: chat.py  item.py
decluttr-app/backend/app/api/services/: gemini_service.py  supabase_service.py  trulens_service.py
decluttr-app/backend/app/utils/: schema.py
decluttr-app/frontend/: package-lock.json  package.json
decluttr-app/frontend/.next/: trace
decluttr-app/frontend/.next/cache/: .tsbuildinfo
decluttr-app/frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
decluttr-app/frontend/.next/server/app/: page.js  page_client-reference-manifest.js
decluttr-app/frontend/.next/server/vendor-chunks/: @babel.js  @radix-ui.js  @swc.js  class-variance-authority.js  clsx.js  next.js  react-images-uploading.js  tailwind-merge.js
decluttr-app/frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
decluttr-app/frontend/.next/types/app/: layout.ts  (+1 more)
decluttr-app/frontend/app/: page.tsx
decluttr-app/frontend/app/components/: ImageUpload.tsx
decluttr-app/frontend/src/: App.js  App_localsetup.js  index.css
decluttr-app/frontend/src/components/: ClearButton.js  GenerateButton.js  ImagePreview.js  ImageUpload.js  ParamBoxes.js  SubmitButton.js
src/notebooks/: decluttr-exploration.ipynb
(+15 files in other folders)
